feat: add mobile direct chat creation
